--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies-angular",
+  "name": "crud-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
